hphp/hack/test/ifc/check/out_of_bounds_exceptions.php.exp
=== IFC analysis results for out_of_bounds_exceptions.php
File "out_of_bounds_exceptions.php", line 75, characters 7-22:
Data with policy `VEC` appears in context `PUBLIC`. (Typing[4379])
  File "out_of_bounds_exceptions.php", line 67, characters 22-33:
  This may be the data source with policy `VEC`
  File "out_of_bounds_exceptions.php", line 70, characters 15-24:
  This may be the data sink with policy `PUBLIC`
  File "out_of_bounds_exceptions.php", line 94, characters 5-16:
  Another program point contributing to the illegal flow
  File "out_of_bounds_exceptions.php", line 74, characters 9-33:
  Another program point contributing to the illegal flow
File "out_of_bounds_exceptions.php", line 82, characters 7-22:
Data with policy `VEC` appears in context `PUBLIC`. (Typing[4379])
  File "out_of_bounds_exceptions.php", line 67, characters 22-33:
  This may be the data source with policy `VEC`
  File "out_of_bounds_exceptions.php", line 70, characters 15-24:
  This may be the data sink with policy `PUBLIC`
  File "out_of_bounds_exceptions.php", line 105, characters 5-16:
  Another program point contributing to the illegal flow
  File "out_of_bounds_exceptions.php", line 102, characters 5-15:
  Another program point contributing to the illegal flow
  File "out_of_bounds_exceptions.php", line 81, characters 9-33:
  Another program point contributing to the illegal flow
File "out_of_bounds_exceptions.php", line 51, characters 3-18:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "out_of_bounds_exceptions.php", line 6, characters 68-74:
  This may be the data source with policy `PRIVATE`
  File "out_of_bounds_exceptions.php", line 11, characters 67-73:
  This may be the data sink with policy `PUBLIC`
File "out_of_bounds_exceptions.php", line 21, characters 3-18:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "out_of_bounds_exceptions.php", line 6, characters 68-74:
  This may be the data source with policy `PRIVATE`
  File "out_of_bounds_exceptions.php", line 11, characters 67-73:
  This may be the data sink with policy `PUBLIC`
File "out_of_bounds_exceptions.php", line 31, characters 3-18:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "out_of_bounds_exceptions.php", line 6, characters 68-74:
  This may be the data source with policy `PRIVATE`
  File "out_of_bounds_exceptions.php", line 11, characters 67-73:
  This may be the data sink with policy `PUBLIC`
